[package]
name = "re"
version = "0.1.0"
authors = ["vedran <vinkovedran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.102", features = ["derive"] }
toml = "0.5.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
